--- a/index.html
+++ b/index.html
@@ -29,9 +29,32 @@
         <input type="email" name="email" placeholder="email" /><br />
         <input type="date" name="naissance" /><br />
         <input type="number" name="tel" placeholder="tel" /><br />
-        <input type="url" name="facebook" placeholder="url facebook" /><br/>
+        <input type="url" name="facebook" placeholder="url facebook" /><br />
         <input type="submit" value="envoyer">
     </div>
+    <div id="tableau">
+        <table>
+            <tr>
+                <th>Sports</th>
+                <td>Tennis de table</td>
+                <td>Football</td>
+                <td>Poney</td>
+                <td>Curling</td>
+                <td>Patinnage artistique</td>
+                <td>Basketball</td>
+            </tr>
+            <tr>
+                <th>Compétition</th>
+                <td>JO</td>
+                <td>Championnats d'Europe</td>
+                <td>Coupe du monde</td>
+                <td>Championnats régionnaux</td>
+                <td>Coupe district</td>
+                <td>NBA</td>
+            </tr>
+        </table>
+    </div>
+    <div class="biereimg bgimg"></div>
 </body>
 
 </html>
